# isic-cli

./: .editorconfig  .git-blame-ignore-revs  README.md  justfile  make-release.sh  packaging.md  pyoxidizer.bzl  pyproject.toml  setup.py  tox.ini
.github/: zip_and_upload_package.sh
.github/workflows/: ci.yml  package.yml  release.yml
isic_cli/: __init__.py  collection.py  image.py  metadata.py  oauth.py  session.py  utils.py
isic_cli/cli/: __init__.py  __main__.py  accession.py  auth.py  collection.py  context.py  image.py  login.py  metadata.py  types.py  user.py  utils.py
isic_cli/io/: http.py
isic_cli/utils/: version.py
tests/: conftest.py  test_auth.py  test_cli_base.py  test_cli_collection.py  test_cli_image.py  test_cli_metadata.py  test_isic_cli.py  test_user.py  test_utils.py  test_version.py
